--- a/css/screen.css
+++ b/css/screen.css
@@ -364,5 +364,49 @@ label {
 
 /* ===== LAYOUT STYLES ====== */
 
+html,
+body {
+  background-color: #333333;
+  width: 100%;
+  height: 100%;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'monospace';
+}
+
+#content {
+  background-color: #333333;
+  margin: auto;
+  width: 25%;
+  padding: 40px;
+  min-width: 500px;
+}
+
+h1 {
+  text-align: center;
+  padding: 0 0 30px;
+  font-size: 32px;
+  font-weight: 900;
+}
+
+p {
+  text-align: center;
+  padding: 0 0 20px;
+}
+
+@media screen and (min-width: 600px) {
+  html {
+    margin: 1.5% 10%;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  html {
+    margin: 1.5% 10%;
+  }
+
+  form {
+    float: left;
+    width: 50%;
+  }
+}
 
 /* ===== STATE STYLES ======= */
